--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-gifted-chat": "^0.3.0",
     "react-native-image-picker": "^0.26.10",
     "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-modal": "^6.4.0",
     "react-native-permissions": "^1.1.1",
     "react-native-status-bar-height": "^2.0.0",
     "react-native-vector-icons": "^4.6.0",
