--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native": "0.55.4",
     "react-native-background-geolocation": "^2.12.2",
     "react-native-collapsible": "^0.10.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.0",
     "react-native-fbsdk": "^0.7.0",
     "react-native-fetch-blob": "^0.10.8",
