--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "graphql-tag": "^2.9.2",
     "hawk": "^7.0.7",
     "moment": "^2.22.1",
+    "native-base": "^2.7.2",
     "plist": "^3.0.1",
     "react": "16.0.0",
     "react-apollo": "^2.1.4",
@@ -61,6 +62,7 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-modal": "^6.4.0",
     "react-native-permissions": "^1.1.1",
+    "react-native-picker-select": "3.0.0",
     "react-native-status-bar-height": "^2.0.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "1.5.0",
