--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-native-status-bar-height": "^2.0.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "1.5.0",
+    "recyclerlistview": "^1.3.4",
     "subscriptions-transport-ws": "^0.9.11",
     "uuid": "^3.3.2",
     "xcode": "^1.0.0"
