--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
     "react-native-gifted-chat": "^0.3.0",
     "react-native-image-picker": "^0.26.10",
     "react-native-keyboard-spacer": "^0.4.1",
-    "react-native-modal": "^6.4.0",
-    "react-native-on-layout": "^2.0.2",
+    "react-native-modalbox": "^1.6.0",
     "react-native-permissions": "^1.1.1",
     "react-native-picker-select": "3.0.0",
     "react-native-status-bar-height": "^2.0.0",
