--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,9 +144,9 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-background-fetch')
-    compile project(':react-native-background-geolocation')
-    compile(project(':react-native-firebase')) {
+    implementation project(':react-native-background-fetch')
+    implementation project(':react-native-background-geolocation')
+    implementation (project(':react-native-firebase')) {
         transitive = false
     }
     implementation project(':react-native-firebase')
@@ -166,12 +166,13 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$rootProject.supportLibVersion"
 
     // Firebase dependencies
+    //implementation 'com.google.firebase:firebase-analytics:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation "com.google.android.gms:play-services-base:15.0.1"
-    implementation 'com.google.firebase:firebase-core:15.0.2'
-    implementation 'com.google.firebase:firebase-firestore:17.0.1'
+    implementation 'com.google.firebase:firebase-firestore:17.0.2'
     // We may end up using 15.1.0 instead instead of 16.0.1 for auth
-    implementation 'com.google.firebase:firebase-auth:15.1.0'
-    implementation "com.google.firebase:firebase-storage:15.0.2"
+    implementation 'com.google.firebase:firebase-auth:16.0.2'
+    implementation "com.google.firebase:firebase-storage:16.0.1"
     implementation "com.google.firebase:firebase-messaging:17.1.0"
     implementation 'me.leolin:ShortcutBadger:1.1.21@aar' // <-- Add this line if you wish to use badge on Android
 
@@ -186,3 +187,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply plugin: 'com.google.gms.google-services'
+com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
+
