--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -46,14 +46,14 @@
         <meta-data android:name="com.transistorsoft.locationmanager.license" android:value="81c1f66af6ec7ce2a03650c43e9d4d8bb521b5c23876cdaa7710d2e503b00f76" />
         <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
             See README(https://goo.gl/l4GJaQ) for more. -->
-        <meta-data
+        <!---<meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ic_stat_ic_notification" />
+            android:resource="@drawable/ic_stat_ic_notification" />-->
         <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
             notification message. See README(https://goo.gl/6BKBk7) for more. -->
-        <meta-data
+        <!--<meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
-            android:resource="@color/colorAccent" />
+            android:resource="@color/colorAccent" />-->
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
