--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "@babel/cli": "^7.0.0-beta.40",
     "@babel/core": "^7.0.0-beta.40",
     "@babel/preset-env": "^7.0.0-beta.40",
+    "babel-eslint": "^8.2.6",
     "babel-preset-react-native-stage-0": "^1.0.1",
-    "jest-expo": "23.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
     "react-test-renderer": "16.0.0"
   },
   "scripts": {
