installed eslint, react-native-fast-images

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "react/jsx-indent-props": [0, "tab"],
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "no-use-before-define": ["error", { "variables": false }],
-        "react/prop-types": 0
+        "react/prop-types": 0,
+        "no-underscore-dangle": 0
     }
 }
