--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-collapsible": "^0.10.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.0",
+    "react-native-fast-image": "^4.0.14",
     "react-native-fbsdk": "^0.7.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-firebase": "^4.2.0",
