--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "plist": "^3.0.1",
     "react": "16.0.0",
     "react-apollo": "^2.1.4",
+    "react-composer": "^5.0.1",
     "react-native": "0.55.4",
     "react-native-background-geolocation": "^2.12.2",
     "react-native-collapsible": "^0.10.0",
