finished updating linting requirements

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "no-use-before-define": ["error", { "variables": false }],
         "react/prop-types": 0,
-        "no-underscore-dangle": 0
+        "no-underscore-dangle": 0,
+        "no-unused-expressions": 0,
+        "import/prefer-default-export": 0
     }
 }
