--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: "com.android.application"
+apply plugin: "io.fabric"
+apply plugin: "com.google.firebase.firebase-perf"
 
 import com.android.build.OutputFile
 
@@ -175,6 +177,10 @@ dependencies {
     implementation "com.google.firebase:firebase-storage:16.0.1"
     implementation "com.google.firebase:firebase-messaging:17.1.0"
     implementation 'me.leolin:ShortcutBadger:1.1.21@aar' // <-- Add this line if you wish to use badge on Android
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
+      transitive = true
+    }
+    implementation "com.google.firebase:firebase-perf:16.0.0"
 
     implementation project(':react-native-fetch-blob')
     implementation project(':react-native-fast-image')
