--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,7 +5,7 @@ target 'ManhattanMatch' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
 
-  pod 'Firebase/Core'
+  pod 'Firebase/Core', '~> 5.3.0'
   pod 'Firebase/Auth'
   pod 'Firebase/Firestore'
   pod 'Firebase/Storage'
