--- a/ios/ManhattanMatch.xcodeproj/xcshareddata/xcschemes/mock.xcscheme
+++ b/ios/ManhattanMatch.xcodeproj/xcshareddata/xcschemes/mock.xcscheme
@@ -10,7 +10,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "echo &quot;.env.prod&quot; &gt; /tmp/envfile">
+               scriptText = "echo &quot;.env.mock&quot; &gt; /tmp/envfile">
             </ActionContent>
          </ExecutionAction>
       </PreActions>
