--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native": "0.55.4",
     "react-native-background-geolocation": "^2.12.2",
     "react-native-collapsible": "^0.10.0",
+    "react-native-config": "^0.11.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.0",
     "react-native-fast-image": "^4.0.14",
