--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,12 +42,21 @@ android {
         minSdkVersion 16
         targetSdkVersion rootProject.targetSdkVersion
         multiDexEnabled true
-        versionCode 1
+        versionCode 2
         versionName "0.1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+    signingConfigs {
+        release {
+            storeFile file(System.getenv("TAGG_RELEASE_STORE_FILE"))
+            storePassword System.getenv("TAGG_RELEASE_STORE_PASSWORD")
+            keyAlias System.getenv("TAGG_RELEASE_KEY_ALIAS")
+            keyPassword System.getenv("TAGG_RELEASE_KEY_PASSWORD")
+        }
+    }
+
     splits {
         abi {
             reset()
@@ -60,6 +69,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
