--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,6 +35,8 @@ target 'ManhattanMatch' do
 
   #pod 'react-native-config', :path => '../node_modules/react-native-config'
 
+  pod 'SentryReactNative', :path => '../node_modules/react-native-sentry'
+
   target 'ManhattanMatchTests' do
     inherit! :search_paths
     # Pods for testing
