--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,7 +43,7 @@ android {
         minSdkVersion 16
         targetSdkVersion rootProject.targetSdkVersion
         multiDexEnabled true
-        versionCode 6
+        versionCode 7
         versionName "0.1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
@@ -51,10 +51,14 @@ android {
     }
     signingConfigs {
         release {
-            storeFile file(System.getenv("TAGG_RELEASE_STORE_FILE"))
-            storePassword System.getenv("TAGG_RELEASE_STORE_PASSWORD")
-            keyAlias System.getenv("TAGG_RELEASE_KEY_ALIAS")
-            keyPassword System.getenv("TAGG_RELEASE_KEY_PASSWORD")
+            //storeFile file(System.getenv("TAGG_RELEASE_STORE_FILE"))
+            //storePassword System.getenv("TAGG_RELEASE_STORE_PASSWORD")
+            //keyAlias System.getenv("TAGG_RELEASE_KEY_ALIAS")
+            //keyPassword System.getenv("TAGG_RELEASE_KEY_PASSWORD")
+            storeFile file("/Users/jonathanmcaboy/Desktop/Dev/Tagg/android/secure/tagg-key.keystore")
+            storePassword "HHCdty28"
+            keyAlias "tagg-key-alias"
+            keyPassword "HHCdty28"
         }
     }
 
