--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,10 @@
   "presets": [
     "babel-preset-react-native",
     "module:metro-react-native-babel-preset"
-  ]
+  ],
+  "env": {
+    "production": {
+      "plugins": ["transform-remove-console"]
+    }
+  }
 }
