--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,12 +95,8 @@ android {
 }
 
 dependencies {
+    compile project(':rn-fetch-blob')
     compile project(':react-native-vector-icons')
-    compile project(':react-native-image-picker')
-    compile project(':react-native-firebase')
-    compile project(':react-native-fbsdk')
-    compile project(':react-native-fast-image')
-    compile project(':react-native-background-geolocation')
     compile project(':react-native-sentry')
     //compile project(':react-native-vector-icons')
     //compile project(':react-native-image-picker')
