--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.0.0-beta.40",
     "@babel/runtime": "^7.1.2",
     "babel-eslint": "^8.2.6",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-preset-react-native": "5",
     "eslint": "^5.4.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -82,6 +83,7 @@
     "react-native-firebase": "^5.0.0",
     "react-native-gifted-chat": "^0.3.0",
     "react-native-image-picker": "^0.26.10",
+    "react-native-keyboard-aware-scroll-view": "^0.7.4",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-modalbox": "^1.6.0",
     "react-native-permissions": "^1.1.1",
@@ -92,6 +94,7 @@
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "1.5.0",
     "recyclerlistview": "^1.3.4",
+    "rn-fetch-blob": "^0.10.13",
     "subscriptions-transport-ws": "^0.9.11",
     "uuid": "^3.3.2",
     "xcode": "^1.0.0"
