--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,6 +39,17 @@ allprojects {
     }
 }
 
+subprojects {
+    afterEvaluate {project ->
+        if (project.hasProperty("android")) {
+            android {
+                compileSdkVersion rootProject.ext.compileSdkVersion
+                buildToolsVersion rootProject.ext.buildToolsVersion
+            }
+        }
+    }
+}
+
 ext {
     compileSdkVersion   = 27
     targetSdkVersion    = 27
