--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,7 +37,7 @@ target 'ManhattanMatch' do
 
   pod 'SentryReactNative', :path => '../node_modules/react-native-sentry'
 
-  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+  #pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
 
   target 'ManhattanMatchTests' do
     inherit! :search_paths
