--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
-rootProject.name = 'ManhattanMatch'
+rootProject.name = 'Tagg'
+include ':react-native-splash-screen'
+project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
 include ':rn-fetch-blob'
 project(':rn-fetch-blob').projectDir = new File(rootProject.projectDir, '../node_modules/rn-fetch-blob/android')
 include ':react-native-sentry'
