--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,6 +39,8 @@ target 'ManhattanMatch' do
 
   #pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'ManhattanMatchTests' do
     inherit! :search_paths
     # Pods for testing
