--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-native-picker-select": "3.0.0",
     "react-native-radio-buttons-group": "^1.0.7",
     "react-native-sentry": "^0.39.0",
+    "react-native-splash-screen": "3.0.6",
     "react-native-status-bar-height": "^2.0.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "1.5.0",
