android splash screen setup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,16 @@
 {
   "env": {
-      "node": true,
-      "browser": true,
-      "es6": true,
-      "jest": true
+    "node": true,
+    "browser": true,
+    "es6": true,
+    "jest": true
   },
   "parser": "babel-eslint",
   "extends": "airbnb",
   "rules": {
     "linebreak-style": 0,
     "react/prop-types": 0,
-    "react/jsx-filename-extension": 0
+    "react/jsx-filename-extension": 0,
+    "import/prefer-default-export": 0
   }
 }
