--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,7 +39,7 @@ target 'ManhattanMatch' do
 
   #pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
 
-  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+  #pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
   target 'ManhattanMatchTests' do
     inherit! :search_paths
