applied prettier to all FE components

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,13 @@
     "linebreak-style": 0,
     "react/prop-types": 0,
     "react/jsx-filename-extension": 0,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "no-unused-expressions": [
+      "error",
+      {
+        "allowShortCircuit": true,
+        "allowTaggedTemplates": true
+      }
+    ]
   }
 }
