--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "react-native-elements": "^0.19.0",
     "react-native-fast-image": "^4.0.14",
     "react-native-fbsdk": "^0.8.0",
-    "react-native-firebase": "^5.0.0",
+    "react-native-firebase": "5.1.0",
     "react-native-gifted-chat": "^0.3.0",
     "react-native-image-picker": "^0.26.10",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
