--- a/ios/ManhattanMatch/Info.plist
+++ b/ios/ManhattanMatch/Info.plist
@@ -30,7 +30,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>61</string>
+	<string>66</string>
 	<key>FacebookAppID</key>
 	<string>1751170988304368</string>
 	<key>FacebookDisplayName</key>
@@ -64,9 +64,9 @@
 	<key>NSCalendarsUsageDescription</key>
 	<string>$(PRODUCT_NAME) would like to use your calendar</string>
 	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) would like to use your camera</string>
+	<string>We need access to your camera in order to take a photo of you. The photo will be included in your profile.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Location Always And When In Use Usage Description</string>
+	<string>We use your location to match you with others in your area!</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>This App would like to track your location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
@@ -78,7 +78,7 @@
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>$(PRODUCT_NAME) would like to save photos to your photo gallery</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>$(PRODUCT_NAME) would like access to your photo gallery</string>
+	<string>We need access to your photo library only to add selected photos to your profile.</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>$(PRODUCT_NAME) would like to use Speech Recognition</string>
 	<key>UIAppFonts</key>
