--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   },
   "main": "dist/index.js",
   "dependencies": {
-    "apollo-server-express": "^1.3.6",
+    "apollo-server": "^2.2.2",
     "body-parser": "^1.18.2",
     "busboy": "^0.2.14",
     "content-type": "^1.0.4",
@@ -31,6 +31,7 @@
     "subscriptions-transport-ws": "^0.9.9"
   },
   "devDependencies": {
+    "@types/node": "^10.12.9",
     "@types/ws": "^5.1.2",
     "tslint": "^5.8.0",
     "typescript": "^2.5.3"
