--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,10 +6,9 @@
     "noImplicitReturns": true,
     "outDir": "dist",
     "sourceMap": true,
-    "target": "es6"
+    "target": "es6",
+    "esModuleInterop": false
   },
   "compileOnSave": true,
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
