--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.16.0",
     "@types/neo4j": "^2.0.2",
     "apollo": "^2.1.2",
+    "apollo-datasource": "^0.2.0",
     "apollo-server": "^2.2.2",
     "apollo-server-express": "^2.0.0-rc.12",
     "body-parser": "^1.18.2",
