--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/plugin-external-helpers": "^7.0.0",
     "@babel/preset-env": "^7.0.0-beta.40",
     "@babel/runtime": "^7.1.2",
+    "apollo": "^2.1.3",
     "babel-eslint": "^8.2.6",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-preset-react-native": "5",
