--- a/server/package.json
+++ b/server/package.json
@@ -47,8 +47,7 @@
     "jest-cli": "^23.6.0",
     "regenerator-runtime": "^0.13.1",
     "ts-jest": "^23.10.5",
-    "tslint": "^5.8.0",
-    "typescript": "^3.1.6"
+    "tslint": "^5.8.0"
   },
   "jest": {
     "testPathIgnorePatterns": [
