--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "tslint-config-prettier": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
-    "tslint-react-recommended": "^1.0.15",
-    "typescript": "^3.1.6"
+    "tslint-react-recommended": "^1.0.15"
   },
   "resolutions": {
     "@babel/core": "^7.0.0-beta.40",
