--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.3.1",
     "apollo-link": "^1.2.2",
+    "apollo-link-context": "^1.0.10",
     "apollo-link-http": "^1.5.4",
     "apollo-link-state": "^0.4.1",
     "apollo-link-ws": "^1.0.8",
