--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/react-native-vector-icons": "^4.6.4",
     "@types/react-test-renderer": "^16.0.3",
     "@types/uuid": "^3.4.4",
-    "apollo": "^2.1.3",
+    "apollo": "2.1.8",
     "babel-eslint": "^8.2.6",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^5.4.0",
@@ -50,7 +50,6 @@
   "resolutions": {
     "@babel/core": "^7.0.0-beta.40",
     "babel-core": "7.0.0-bridge.0",
-    "apollo": "^2.1.3",
     "graphql": "14.0.0"
   },
   "scripts": {
