--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@types/react-navigation": "^1.5.0",
     "absolute-path": "^0.0.0",
     "adm-zip": "^0.4.11",
+    "apollo-cache": "^1.1.21",
     "apollo-cache-inmemory": "^1.2.1",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.3.1",
