altered otherBids to use block and viewObjectionable

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "skipLibCheck": true,
     "declaration": true,
     "noUnusedLocals": true,
+    "esModuleInterop": true,
     "strictNullChecks": false
   },
   "exclude": ["node_modules", "server"]
