--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,13 @@
   "presets": ["module:metro-react-native-babel-preset"],
   "env": {
     "production": {
-      "plugins": ["transform-remove-console"]
+      "plugins": [
+        ["@babel/plugin-transform-flow-strip-types"],
+        ["@babel/plugin-proposal-decorators"],
+        ["@babel/plugin-proposal-class-properties"],
+        ["transform-remove-console"]
+      ]
     }
   }
+  // "plugins": ["@babel/plugin-proposal-class-properties"]
 }
