--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@babel/cli": "^7.0.0-beta.40",
     "@babel/core": "^7.0.0-beta.40",
     "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.40",
+    "@babel/plugin-proposal-decorators": "7.0.0-beta.40",
+    "@babel/plugin-transform-flow-strip-types": "7.0.0-beta.40",
     "@babel/preset-env": "^7.0.0-beta.40",
     "@babel/runtime": "^7.1.2",
     "@types/faker": "^4.1.4",
@@ -33,8 +36,11 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "jest": "^23.6.0",
     "metro-react-native-babel-preset": "0.50.0",
     "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.7.0",
+    "react-native-testing-library": "^1.4.2",
     "react-native-typescript-transformer": "^1.2.10",
     "react-test-renderer": "16.0.0",
     "schedule": "0.4.0",
@@ -63,7 +69,7 @@
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "test": "node node_modules/jest/bin/jest.js --watch",
+    "test": "jest",
     "build-funcs": "babel firebaseFunctions --out-dir functions --presets=es2015 --copy-files --ignore firebaseFunctions/node_modules",
     "lint": "tslint -p \".\" -t stylish",
     "gql:local": "node server/dist/index.js",
@@ -81,6 +87,11 @@
       "tsx",
       "js"
     ],
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "tsconfig.json"
+      }
+    },
     "transform": {
       "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
       "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js",
@@ -89,7 +100,8 @@
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "testPathIgnorePatterns": [
       "\\.snap$",
-      "<rootDir>/node_modules/"
+      "<rootDir>/node_modules/",
+      "<rootDir>/server/"
     ],
     "cacheDirectory": ".jest/cache"
   },
