changed dateRequests and hasDateOpen to check to see if dateRequests are older than today

--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,13 @@
 {
-  "presets": ["module:metro-react-native-babel-preset"],
+  "presets": ["module:metro-react-native-babel-preset", "@babel/preset-flow"],
   "env": {
     "production": {
       "plugins": [
         ["@babel/plugin-transform-flow-strip-types"],
-        ["@babel/plugin-proposal-decorators"],
+        [
+          "@babel/plugin-proposal-decorators",
+          { "decoratorsBeforeExport": true, "legacy": true }
+        ],
         ["@babel/plugin-proposal-class-properties"],
         ["transform-remove-console"]
       ]
