--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,6 +41,8 @@ target 'ManhattanMatch' do
 
   #pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
+  pod 'CodePush', :path => '../node_modules/react-native-code-push'
+
   target 'ManhattanMatchTests' do
     inherit! :search_paths
     # Pods for testing
