--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-proposal-decorators": "7.0.0-beta.40",
     "@babel/plugin-transform-flow-strip-types": "7.0.0-beta.40",
     "@babel/preset-env": "^7.0.0-beta.40",
+    "@babel/preset-flow": "^7.0.0",
     "@babel/runtime": "^7.1.2",
     "@types/faker": "^4.1.4",
     "@types/jest": "^23.3.9",
@@ -137,6 +138,7 @@
     "react-native": "0.57.0",
     "react-native-action-button": "^2.8.5",
     "react-native-background-geolocation": "^2.14.2",
+    "react-native-code-push": "^5.5.1",
     "react-native-collapsible": "^0.10.0",
     "react-native-config": "^0.11.5",
     "react-native-datepicker": "^1.7.2",
