--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -100,6 +100,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-gesture-handler')
     compile project(':react-native-code-push')
     compile project(':react-native-splash-screen')
     compile project(':rn-fetch-blob')
