--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
   },
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "^0.0.12",
-    "@types/react-navigation": "^1.5.0",
+    "@types/react-navigation": "^3.0.9",
     "absolute-path": "^0.0.0",
     "adm-zip": "^0.4.11",
     "apollo-cache": "^1.1.21",
@@ -146,6 +146,7 @@
     "react-native-fast-image": "^4.0.14",
     "react-native-fbsdk": "^0.8.0",
     "react-native-firebase": "5.1.0",
+    "react-native-gesture-handler": "^1.0.12",
     "react-native-gifted-chat": "0.5.0",
     "react-native-image-picker": "^0.26.10",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
@@ -158,7 +159,7 @@
     "react-native-splash-screen": "3.0.6",
     "react-native-status-bar-height": "^2.0.0",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "1.5.0",
+    "react-navigation": "3.0.9",
     "recyclerlistview": "1.4.0-beta.5",
     "rn-fetch-blob": "^0.10.13",
     "subscriptions-transport-ws": "^0.9.11",
