--- a/package.json
+++ b/package.json
@@ -159,7 +159,7 @@
     "react-native-splash-screen": "3.0.6",
     "react-native-status-bar-height": "^2.0.0",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "3.0.9",
+    "react-navigation": "^3.0.9",
     "recyclerlistview": "1.4.0-beta.5",
     "rn-fetch-blob": "^0.10.13",
     "subscriptions-transport-ws": "^0.9.11",
